# visual_servoing

./: CMakeLists.txt  package.xml
launch/: cluster_extraction.launch
msg/: manipulatorAdjustment.msg  objectDistance.msg
src/: Corner.cpp  Corner.h  cluster_controller.cpp  cluster_extraction.cpp  cluster_transform.cpp  hand_transform.cpp  manipulator_adjuster.cpp  manipulator_controller.cpp
